Fixed Horizontal Overflow

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,8 @@
 }
 
 ::-webkit-scrollbar-track {
-  background: rgb(14, 43, 82);
-  background: linear-gradient(180deg, rgba(14, 43, 82, 1) 10%, rgba(37, 111, 137, 1) 15%, rgba(136, 173, 164, 1) 25%, rgba(227, 216, 173, 1) 97%);
+  background: rgb(14,43,82);
+  background: linear-gradient(180deg, rgba(14,43,82,1) 10%, rgba(37,111,137,1) 15%, rgba(136,173,164,1) 25%, rgba(136,173,164,1) 88%, rgba(227,216,173,1) 97%);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -28,6 +28,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
+  overflow-x: hidden;
   background-color: #e3d8ad;
   color: #FFF;
   box-sizing: border-box;
